add : redis and event-driven channel
